# mcp-seipro

./: .gitignore  CLAUDE.md  Dockerfile  README.md  bootstrap.py  build_mcpb.py  deploy-fly.sh  fly.toml  manifest.json  pyproject.toml  setup_claude.py
.claude/skills/ruff-strict-compliance/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-ruff-catraca.md
docs/rfc/: 0001-web-first.md  0002-pesquisa-web-ergonomia.md  0002-secure-credentials.md  0003-fastmcp-ergonomia.md  0004-excecoes-e-codigo-defensivo.md  0005-noqa-zero.md
scripts/: __init__.py  bench_consultar_processo.py  bench_listar_processos.py  smoke_cache.py  smoke_mcp.py  smoke_web.py
src/mcp_seipro/: sei_web_client.py  server.py
src/todos/: __init__.py  __main__.py  access_control.py  auth.py  catalog_cache.py  disk_cache.py  exceptions.py  html_utils.py  remote.py  sei_backend.py  sei_client.py  sei_styles.py  sei_web_client.py  server.py  setup_wizard.py
tests/: test_detect_modsei.py  test_parsers.py  test_parsers_extra.py  test_parsers_real.py
tests/fixtures/: __init__.py  capture.py  scrub.py
