[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sei"
version = "0.4.0"
description = "TOdos Domina O Sei — MCP server para o SEI com 121 tools, scraper HTTP + REST híbrido e suporte a instâncias sem mod-wssei"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "sei", "governo", "documentos", "claude"]
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4",
    "markdownify>=0.14",
    "pdfplumber>=0.10",
    "pdf2image>=1.16",
    "pytesseract>=0.3",
    "uvicorn[standard]>=0.30",
    "fastmcp==3.4.2",
    "keyring>=25.0.0",
]

[project.scripts]
todos = "todos.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.1a14",
    "vulture>=2.14",
    "bandit>=1.8",
    "pip-audit>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todos"]

[tool.hatch.build.targets.sdist]
include = ["src/todos/", "pyproject.toml", "README.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ── Formatter conflicts (ruff format owns these) ──────────────────────
    "W191", "E101",                  # tabs
    "E111", "E114", "E117",          # indentation width
    "D206", "D300",                  # docstring formatting
    "Q000", "Q001", "Q002", "Q003",  # quote style
    "COM812", "COM819",              # trailing commas
    "ISC001", "ISC002",              # implicit string concat
    "E501",                          # line length (formatter handles it)
    # ── Mutually exclusive D pairs — pick one of each ─────────────────────
    "D203",   # keep D211 (no blank line before class)
    "D213",   # keep D212 (summary on first line)
    # ── Intentional project-wide decisions ────────────────────────────────
    "RUF001", "RUF002", "RUF003",    # ambiguous unicode — Portuguese text is intentional
    "CPY001",                        # no copyright headers
    "FIX001", "FIX002", "FIX003", "FIX004",  # FIXME/HACK markers ok
    "TD001", "TD002", "TD003", "TD004", "TD005", "TD006", "TD007",  # TODO tracking
    "S104",   # 0.0.0.0 intentional — Railway/container deploy (same as bandit skip)
]

[tool.ruff.lint.per-file-ignores]
"bootstrap.py" = ["S603", "S606"]  # subprocess with controlled inputs (sys.executable, Path objects)
"setup_claude.py" = ["S603"]  # legitimate subprocess calls with trusted input
"scripts/smoke_web.py" = ["D103", "PLR0915", "T201"]
# TRY002/TRY003/EM101/EM102: raise RuntimeError/SEIError with inline messages is idiomatic
# in these files; scoped here (not global) so new files are still checked
"scripts/bench_consultar_processo.py" = ["S603", "S606", "TRY002", "TRY003", "EM101", "EM102"]
"scripts/bench_listar_processos.py" = ["S603", "S606", "E402", "TRY002", "TRY003", "EM101", "EM102"]
"src/todos/sei_client.py" = ["TRY002", "TRY003", "EM101", "EM102"]
"src/todos/sei_web_client.py" = ["TRY002", "TRY003", "EM101", "EM102"]
"src/todos/server.py" = ["TRY002", "TRY003", "EM101", "EM102"]
"tests/**" = ["S101", "ANN", "D", "PLR2004", "SLF001"]  # assert/no-annot/no-docstring/magic-vals ok in tests

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.bandit]
skips = [
    "B101",  # assert ok in non-test code here
    "B104",  # 0.0.0.0 intencional — deploy Railway/container
]
