[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sei"
version = "0.4.0"
description = "TOdos Domina O Sei — MCP server para o SEI com 121 tools, scraper HTTP + REST híbrido e suporte a instâncias sem mod-wssei"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "sei", "governo", "documentos", "claude"]
dependencies = [
    "mcp[cli]>=1.12",
    "httpx>=0.27",
    "beautifulsoup4>=4",
    "markdownify>=0.14",
    "pdfplumber>=0.10",
    "pdf2image>=1.16",
    "pytesseract>=0.3",
    "uvicorn[standard]>=0.30",
    "fastmcp==3.4.2",
    "keyring>=25.0.0",
]

[project.scripts]
todos = "todos.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0.1a14",
    "vulture>=2.14",
    "bandit>=1.8",
    "pip-audit>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todos"]

[tool.hatch.build.targets.sdist]
include = ["src/todos/", "pyproject.toml", "README.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ── Formatter conflicts (ruff format owns these) ──────────────────────
    "W191", "E101",                  # tabs
    "E111", "E114", "E117",          # indentation width
    "D206", "D300",                  # docstring formatting
    "Q000", "Q001", "Q002", "Q003",  # quote style
    "COM812", "COM819",              # trailing commas
    "ISC001", "ISC002",              # implicit string concat
    "E501",                          # line length (formatter handles it)
    # ── Mutually exclusive D pairs — pick one of each ─────────────────────
    "D203",   # keep D211 (no blank line before class)
    "D213",   # keep D212 (summary on first line)
    # ── Intentional project-wide decisions ────────────────────────────────
    "RUF001", "RUF002", "RUF003",    # ambiguous unicode — Portuguese text is intentional
    "CPY001",                        # no copyright headers
    "FIX001", "FIX002", "FIX003", "FIX004",  # FIXME/HACK markers ok
    "TD001", "TD002", "TD003", "TD004", "TD005", "TD006", "TD007",  # TODO tracking
    "S104",   # 0.0.0.0 intentional — Railway/container deploy (same as bandit skip)
]

[tool.ruff.lint.per-file-ignores]
"bootstrap.py" = ["S603", "S606"]  # subprocess with controlled inputs (sys.executable, Path objects)
"setup_claude.py" = ["S603"]  # legitimate subprocess calls with trusted input
"scripts/smoke_web.py" = ["D103", "PLR0915", "T201"]
# TRY002/TRY003/EM101/EM102: raise RuntimeError/SEIError with inline messages is idiomatic
# in these files; scoped here (not global) so new files are still checked
"scripts/bench_consultar_processo.py" = ["S603", "S606", "TRY002", "TRY003", "EM101", "EM102"]
"scripts/bench_listar_processos.py" = ["S603", "S606", "E402", "TRY002", "TRY003", "EM101", "EM102"]
"src/todos/access_control.py" = [
    # D401 on Portuguese docstrings — only first line affected; body remains in Portuguese
    "D401",
]
"src/todos/html_utils.py" = [
    # pytesseract/pdf2image/pdfplumber/io must be deferred — heavy optional deps
    "PLC0415",
    # Layout parsing thresholds (table column count, uppercase header length heuristic)
    "PLR2004",
]
"src/todos/catalog_cache.py" = [
    # Cache stores arbitrary JSON-deserializable values; Any is the correct type
    "ANN401",
    # random.random() used for probabilistic sweep (not crypto); S311 doesn't apply here
    "S311",
]
"src/todos/setup_wizard.py" = [
    # subprocess calls use sys.executable or controlled Path objects — not shell injection
    "S603",
]
"src/todos/auth.py" = [
    # base64/TokenError are conditional imports loaded only when the auth flow is exercised
    "PLC0415",
    # token_type="Bearer" is the RFC 6750 standard string, not a credential
    "S106",
    # len(parts) != 2 checks JWT structure (header.signature); constant would add no clarity
    "PLR2004",
]
"src/todos/sei_client.py" = [
    "TRY002", "TRY003", "EM101", "EM102",
    # Docstring style — Portuguese multi-line summaries don't fit D205/D400/D415 rules
    "D205", "D209", "D400", "D415",
    # REST API methods inherently have many parameters (one per API field)
    "PLR0913", "C901",
    # Optional heavy deps (keyring, os, datetime) must be deferred; moving to top-level would
    # break environments without them and change import-time behaviour
    "PLC0415",
    # Cache stores arbitrary API-returned values; Any is the correct type here
    "ANN401",
    # Sync open()/os.path.* inside async — architectural constraint shared with sei_web_client;
    # refactor to asyncio.to_thread / aiofiles is tracked separately (ASYNC230/240, PTH)
    "ASYNC230", "ASYNC240", "PTH110", "PTH119", "PTH123",
    # datetime.now() without tz — local time intentional for BR gov document dates
    "DTZ005",
]
"src/todos/sei_web_client.py" = [
    "TRY002", "TRY003", "EM101", "EM102",
    "ARG002",  # listar_usuarios_web.apenas_unidade: interface parity with SEIClient; web form ignores it by design
    # Magic values: HTTP status codes and HTML column counts for SEI layout invariants
    "PLR2004",
    # Scraper methods are inherently complex (multi-step web flows, branching HTML layouts)
    "C901", "PLR0912", "PLR0913", "PLR0915",
    # Optional heavy deps (keyring, mimetypes, os, datetime) must be deferred at import time
    "PLC0415",
    # Sync path ops inside async — architectural constraint; aiofiles refactor tracked separately
    "ASYNC230", "ASYNC240", "PTH113", "PTH119", "PTH123", "PTH202",
    # date.today() without tz — local date intentional for Brazilian government form fields
    "DTZ011",
    # Web scraper response dicts contain heterogeneous API values; Any is the correct element type
    "ANN401",
]
"src/todos/server.py" = [
    "TRY002", "TRY003", "EM101", "EM102", "PLR0912", "C901",
    "PLR0911",  # multiple return paths in tools inherent to the dual web/REST dispatch model
    "PLR0913",  # tools need ctx + ≥4 business params; grouping into dataclasses hides the MCP schema
    "ANN201", "D103",  # lifespan() is a FastMCP protocol function; signature is framework-dictated
    "ARG005",  # lambda extractors in _CAMPOS_AGRUPAMENTO share (a, s) interface; some only use one arg
    # Deferred/conditional imports: fastmcp auth, tempfile, html, setup_wizard, remote are
    # all runtime-optional — moving to top-level would fail on envs where they're absent
    "PLC0415",
    # cast() with Callable type expressions — moving cast args to string literals degrades readability
    "TC006",
    # TRY201/TRY301: raise primeira re-raises a captured *outer* exception (not the current handler)
    # so bare `raise` would re-raise the wrong exception; explicit `raise primeira` is correct
    "TRY201", "TRY301",
    # ASYNC230/PTH123/PTH118: sync write to tempfile for MCP output artifacts — acceptable here
    "ASYNC230", "PTH123", "PTH118",
]  # boundary file: 121 tools, complexity is inherent
"tests/**" = ["S101", "ANN", "D", "PLR2004", "SLF001"]  # assert/no-annot/no-docstring/magic-vals ok in tests
"tests/fixtures/capture.py" = [
    # CLI capture tool: save() catches broadly so one failed page doesn't abort the whole run
    "BLE001",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.bandit]
skips = [
    "B101",  # assert ok in non-test code here
    "B104",  # 0.0.0.0 intencional — deploy Railway/container
]
